# omegaconf-cloud-resolvers

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  release_docs.yml  test.yml
0.1.x/: 404.html  index.html  objects.inv  sitemap.xml
0.1.x/api/register/: index.html
0.1.x/api/resolvers/aws/parameterstore/: index.html
0.1.x/api/resolvers/aws/secretsmanager/: index.html
0.1.x/api/resolvers/gcp/secretmanager/: index.html
0.1.x/first/install/: index.html
0.1.x/search/: search_index.json
0.1.x/tags/: index.html
0.1.x/users-guide/integration-hydra/: index.html
0.1.x/users-guide/quickstart/: index.html
0.1.x/users-guide/resolvers/: index.html
0.2.x/: 404.html  index.html  objects.inv  sitemap.xml
0.2.x/api/register/: index.html
0.2.x/api/resolvers/aws/parameterstore/: index.html
0.2.x/api/resolvers/aws/secretsmanager/: index.html
0.2.x/api/resolvers/az/keyvault/: index.html
0.2.x/api/resolvers/gcp/secretmanager/: index.html
0.2.x/first/install/: index.html
0.2.x/search/: search_index.json
0.2.x/tags/: index.html
0.2.x/users-guide/integration-hydra/: index.html
0.2.x/users-guide/quickstart/: index.html
0.2.x/users-guide/resolvers/: index.html
docs/: index.md  tags.md
docs/api/: register.md
docs/api/resolvers/aws/: parameterstore.md  secretsmanager.md
docs/api/resolvers/az/: keyvault.md
docs/api/resolvers/gcp/: secretmanager.md
docs/first/: install.md
docs/users-guide/: integration-hydra.md  quickstart.md  resolvers.md
example/: README.md
example/aws/parameter-store/: config.yaml  create-secret.sh  main.py
example/aws/secrets-manager/: config.yaml  config_with_defaults.yaml  create-secret.sh  main.py  main_with_defaults.py
example/gcp/: create-secret.sh
example/gcp/secrets-manager/: config.yaml  main.py
example/hydra/aws/parameter-store/: config.yaml  create-secret.sh  main.py
example/hydra/aws/secrets-manager/: create-secret.sh  main.py
example/hydra/azure/key-vault/: config.yaml  create-secret.sh  main.py
example/hydra/gcp/secret-manager/: config.yaml  create-secret.sh  main.py
hydra_plugins/hydra_cloud_secrets/: __init__.py  injector.py
hydra_plugins/hydra_cloud_secrets/resolvers/: base.py
hydra_plugins/hydra_cloud_secrets/resolvers/aws/: __init__.py  base.py  parameterstore.py  secretsmanager.py
hydra_plugins/hydra_cloud_secrets/resolvers/gcp/: __init__.py  base.py  secretmanager.py
omegaconf_cloud_resolvers/: __init__.py  injector.py
omegaconf_cloud_resolvers/resolvers/: __init__.py  aux.py  base.py
omegaconf_cloud_resolvers/resolvers/aws/: __init__.py  aux.py  base.py  parameterstore.py  secretsmanager.py
omegaconf_cloud_resolvers/resolvers/az/: __init__.py  base.py  keyvault.py
omegaconf_cloud_resolvers/resolvers/gcp/: __init__.py  base.py  secretmanager.py
tests/: test_injector.py  test_register.py
tests/resolvers/: test_aux.py
tests/resolvers/aws/: test_aux.py  test_parameterstore.py  test_secretsmanager.py
tests/resolvers/gcp/: test_secretmanager.py
